# Diploma

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt  tests.ipynb
experiments/: __init__.py  mlflow_experiments.py  train.py
metods/: __init__.py  rope.py
mlruns/.trash/449574056241579235/: meta.yaml
mlruns/.trash/737218006570252308/: meta.yaml
mlruns/.trash/823065668161692062/: meta.yaml
mlruns/.trash/880634105349955428/: meta.yaml
mlruns/0/: meta.yaml
mlruns/485962099204803592/: meta.yaml
mlruns/485962099204803592/0a65af3a2e114bc094f94a445c577c04/: meta.yaml
mlruns/485962099204803592/80cd73edd85544e6b5e18b00991fa182/: meta.yaml
mlruns/575358192339078977/: meta.yaml
mlruns/716714020684800226/: meta.yaml
mlruns/737218006570252308/: meta.yaml
mlruns/823065668161692062/: meta.yaml
models/: __init__.py  base_model.py  gpt_model.py  transformer_squared_model.py
my_tokenizers/: __init__.py  base_tokenizer.py  bpe_tokenizer.py  char_tokenizer.py
notebooks/: transformer_building.ipynb
scr/: BigramLanguageModel.py
static_tests/: __init__.py  analyzers.py  analyzers_baseline.py  analyzers_enhanced.py  config.py  dataset_processor.py  main.py  metrics_calculator.py  requirements.txt  tools_info.py
training/: __init__.py  bigobench_dataset.py  model_registry.py  trainer.py  trainer_unified.py  transformer_squared_training.py  universal_trainer.py
utils/: __init__.py  config.py  data_utils.py  logging.py
utils/configs/: __init__.py  base_config.py  gpt_config.py  transformer_squared_config.py
(+460 files in other folders)
