[project]
name = "diploma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "mlflow>=3.4.0",
    "numpy>=2.3.3",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.1",
    "torch",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
