[project]
name = "diploma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "complexipy>=4.2.0",
    "complexity-analyzer>=0.1.0",
    "flake8>=7.0.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lizard>=1.18.0",
    "mccabe>=0.7.0",
    "mlflow>=3.4.0",
    "multimetric>=2.3.0",
    "numpy>=1.24.0",
    "prospector>=1.17.3",
    "pyccmetrics>=0.1.2",
    "radon>=6.0.1",
    "scikit-learn>=1.3.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.1",
    "torch",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
